--- a/Explore/Versioned_Project/Versioned_Folder/.Versioned Mapping - Rename renamed.DTEMPLATE.json
+++ b/Explore/Versioned_Project/Versioned_Folder/.Versioned Mapping - Rename renamed.DTEMPLATE.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "0iNWSvOfTkvjc7QUIFX741",
-    "name" : "Versioned Mapping - Rename",
+    "name" : "Versioned Mapping - Rename renamed",
     "type" : "DTEMPLATE",
     "metadata" : {
       "modelVersion" : {
@@ -23,6 +23,6 @@
     }
   },
   "dataFileExtension" : "zip",
-  "updateTime" : "2023-07-26T10:29:54.011Z",
+  "updateTime" : "2023-07-26T10:30:45.580Z",
   "objectRefs" : [ ]
 }
