--- a/Explore/Versioned_Project_Renamed/.Versioned_Project_Renamed.Project.json
+++ b/Explore/Versioned_Project_Renamed/.Versioned_Project_Renamed.Project.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "id3oRQu838Xc5WXdjw79qC",
-    "name" : "Versioned_Project",
+    "name" : "Versioned_Project_Renamed",
     "type" : "Project",
     "metadata" : {
       "modelVersion" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2023-07-26T10:29:38.675Z",
+  "updateTime" : "2023-07-26T10:31:15.976Z",
   "objectRefs" : [ ]
 }
